--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
     <div id="GRID" style="position: absolute; left: 0px; top: 0px; z-index: 4;"></div>
     <div id="PROBLEM" style="position: absolute; left: 0px; top: 0px; z-index: 5;"></div>
     <canvas id="MARKS" style="position: absolute; left: 0px; top: 0px; z-index: 6;"></canvas>
-    <canvas id="PALETTE" style="position: fixed; left: 0px; top: 0px; z-index: 7;"></canvas>
-    <div id="TOOLS" style="position: absolute; left: 0px; top: 0px; z-index: 8;">
+    <div id="TOOLS" style="position: absolute; left: 0px; top: 0px; z-index: 7;">
       <div id="HOURS" class="time"></div>
       <div id="DAYS" class="time"></div>
     </div>
+    <canvas id="PALETTE" style="position: fixed; left: 0px; top: 0px; z-index: 8;"></canvas>
     <div id="SENSOR" style="position: absolute; left: 0px; top: 0px; z-index: 9;"></div>
     
     <script>
@@ -2606,7 +2606,7 @@
 	case layers[MARKS]:
 	  layers[MARKS].strokeStyle = color.getRgba()
 	  layers[MARKS].fillStyle = color.getRgba()
-	  layers[MARKS].globalAlpha = color.alpha
+	  // layers[MARKS].globalAlpha = color.alpha
 	  const brushes = [...wState[BRUSHES]]
 	  brushes[wState[BRUSH]].color = color
 	  setWhiteboardState(BRUSHES, brushes)
@@ -3523,6 +3523,7 @@
       let historyIndex = 0
       let currentMouseLocation = globalOrigin.copy()
       let marksHistory
+      layers[MARKS].globalAlpha = 1
 
       const query = parseQueryString(window.location.href)
       const wState = {}
@@ -3591,10 +3592,11 @@
       layers[MARKS].lineJoin = 'round'
       layers[MARKS].lineCap = 'round'
 
+      query[MARKS_IMAGE] && setImage(MARKS, query[MARKS_IMAGE])
+      
       applyState(wState)
 
       document.title = query[DOCUMENT_TITLE] || query[MARKS_DATA] || 'Whiteboard' 
-      query[MARKS_IMAGE] && setImage(MARKS, query[MARKS_IMAGE])      
       console.log(`Wallpaper Image: ${wState[WALLPAPER_IMAGE]}`)
       if (query[PROBLEM_IMAGE]) {
 	setImage(PROBLEM, query[PROBLEM_IMAGE], { margin: '2rem'})
